# NovelWritingAgent

./: .gitignore  LICENSE  OPTIMIZATION_CHECKLIST.md  README.md  STANDALONE_RUNBOOK.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: config-example.yaml  mcp-example.json
examples/: run_skeleton.py  run_with_llm.py
novel_writing_agent/: README.md  __init__.py  agent.py  agents.py  config.py  ideation.py  memory.py  models.py  prompting.py  registry.py  retry.py  state.py  storage.py  tool_base.py  tools.py  ui.py
novel_writing_agent/llm/: anthropic_client.py  base.py  llm_wrapper.py
novel_writing_agent/schema/: schema.py
novel_writing_agent/skills/chapter-planner-agent/: SKILL.md
novel_writing_agent/skills/character-agent/: SKILL.md
novel_writing_agent/skills/convergence-agent/: SKILL.md
novel_writing_agent/skills/main-agent/: SKILL.md
novel_writing_agent/skills/outline-agent/: SKILL.md
novel_writing_agent/skills/premise-agent/: SKILL.md
novel_writing_agent/skills/reviewer-agent/: SKILL.md
novel_writing_agent/skills/writer-agent/: SKILL.md
tests/: test_novel_writing.py
